edited elbow selection in forwardsel a bit more

--- a/06-classification_continued.Rmd
+++ b/06-classification_continued.Rmd
@@ -1001,14 +1001,18 @@ accuracies
 Interesting! The forward selection procedure first added the three meaningful variables `Perimeter`,
 `Concavity`, and `Smoothness`, followed by the irrelevant variables. Figure \@ref(fig:06-fwdsel-3)
 visualizes the accuracy as a function of the number of predictors in the model. You can see that
-as meaningful predictors are added, the estimated accuracy increases; and as you add irrelevant
+as meaningful predictors are added, the estimated accuracy increases substantially; and as you add irrelevant
 variables, the accuracy either exhibits small fluctuations or decreases as the model attempts to tune the number
-of neighbours to account for the extra noise. Given that generally speaking, you should prefer a simpler model (it has a 
-lower variance and less chance of overfitting), the right trade-off of accuracy and number of predictors
-occurs with the model `Class ~ Perimeter + Concavity + Smoothness`. We have successfully removed irrelevant
+of neighbours to account for the extra noise. In order to pick the right model from the sequence, you have 
+to trade off the desiderata to have a high accuracy, but also a simple model with few predictors (which has a 
+lower variance and less chance of overfitting). The way to perform that trade-off is to look for the *elbow*
+in Figure \@ref(fig:06-fwdsel-3), i.e., the place on the plot where the accuracy stops increasing dramatically and
+levels off or begins to decrease. The elbow in Figure \@ref(fig:06-fwdsel-3) appears to occur at the model with 
+3 predictors; after that point the accuracy levels off. So here the right trade-off of accuracy and number of predictors
+occurs with 3 variables: `Class ~ Perimeter + Concavity + Smoothness`. In other words, we have successfully removed irrelevant
 predictors from the model! It is always worth remembering, however, that what cross validation gives you 
 is an *estimate* of the true accuracy; you have to use your judgement when looking at this plot to decide
-whether adding a variable provides a meaningful increase in accuracy.
+where the elbow occurs, and whether adding a variable provides a meaningful increase in accuracy.
 
 ```{r 06-fwdsel-3, warning = FALSE, fig.retina = 2, out.width = "600", fig.cap = "Estimated accuracy versus the number of predictors for the sequence of models built using forward selection"}
 fwd_sel_accuracies_plot <- accuracies %>%
