minor ed predictorsel

--- a/06-classification_continued.Rmd
+++ b/06-classification_continued.Rmd
@@ -898,6 +898,8 @@ continue the rest of this section using forward selection.
 > predictors. More advanced methods do not suffer from this
 > problem as much; see the additional resources at the end of this chapter for
 > where to learn more about advanced predictor selection methods. 
+
+**Forward selection in R**
  
 We now turn to implementing forward selection in R.
 Unfortunately there is no built-in way to do this using the `tidymodels` framework,
