--- a/06-classification_continued.Rmd
+++ b/06-classification_continued.Rmd
@@ -1016,6 +1016,10 @@ predictors from the model! It is always worth remembering, however, that what cr
 is an *estimate* of the true accuracy; you have to use your judgement when looking at this plot to decide
 where the elbow occurs, and whether adding a variable provides a meaningful increase in accuracy.
 
+> Remember: since the choice of which variables to include as predictors is
+> part of tuning your classifier, you *cannot use your test data* for this
+> process! 
+
 ```{r 06-fwdsel-3, warning = FALSE, fig.retina = 2, out.width = "600", fig.cap = "Estimated accuracy versus the number of predictors for the sequence of models built using forward selection"}
 fwd_sel_accuracies_plot <- accuracies %>%
   ggplot(aes(x = size, y = accuracy)) +
@@ -1024,14 +1028,6 @@ fwd_sel_accuracies_plot <- accuracies %>%
 
 fwd_sel_accuracies_plot
 ```
-
-> Remember: since the choice of which variables to include as predictors is
-> part of tuning your classifier, you *cannot use your test data* for this
-> process! You should instead use cross-validation to decide which combination
-> of predictor variables is likely to result in the highest classification
-> accuracy on unseen test data.
-
-
 
 ## Additional resources
 - The [`tidymodels` website](https://tidymodels.org/packages) is an excellent reference for more details on, and advanced usage of, the functions and packages in the past two chapters. Aside from that, it also has a [nice beginner's tutorial](https://www.tidymodels.org/start/) and [an extensive list of more advanced examples](https://www.tidymodels.org/learn/) that you can use to continue learning beyond the scope of this book. It's worth noting that the `tidymodels` package does a lot more than just classification, and so the examples on the website similarly go beyond classification as well. In the next two chapters, you'll learn about another kind of predictive modelling setting, so it might be worth visiting the website only after reading through those chapters.
