fixed commas in numbers

--- a/08-regression2.Rmd
+++ b/08-regression2.Rmd
@@ -109,7 +109,7 @@ print(prediction[[1]])
 
 By using simple linear regression on this small data set to predict the sale price
 for a 2,000 square foot house, we get a predicted value of 
-\$`r format(round(prediction[[1]]), scientific = FALSE)`. But wait a minute...how
+\$`r format(round(prediction[[1]]), big.mark=",", nsmall=0, scientific = FALSE)`. But wait a minute...how
 exactly does simple linear regression choose the line of best fit? Many
 different lines could be drawn through the data points. 
 Some plausible examples are shown in Figure \@ref(fig:08-several-lines).
@@ -124,7 +124,7 @@ small_plot +
 
 Simple linear regression chooses the straight line of best fit by choosing
 the line that minimizes the **average** vertical distance between itself and
-each of the observed data points in the training data. Figure \@ref(fig:08-verticalDisttoMin) illustrates 
+each of the observed data points in the training data. Figure \@ref(fig:08-verticalDistToMin) illustrates 
 these vertical distances as red lines. Finally, to assess the predictive 
 accuracy of a simple linear regression model,
 we use RMSPE&mdash;the same measure of predictive performance we used with K-NN regression.
@@ -187,7 +187,7 @@ and (slope) $\beta_1=$ `r format(round(pull(tidy(pull_workflow_fit(lm_fit)), est
 This means that the equation of the line of best fit is
 $$\text{house price} = `r format(round(pull(tidy(pull_workflow_fit(lm_fit)), estimate)[1]), scientific=FALSE)` + `r format(round(pull(tidy(pull_workflow_fit(lm_fit)), estimate)[2]), scientific=FALSE)`\cdot (\text{house size}).$$
 In other words, the model predicts that houses 
-start at \$`r format(round(pull(tidy(pull_workflow_fit(lm_fit)), estimate)[1]), scientific=FALSE)` for 0 square feet, and that
+start at \$`r format(round(pull(tidy(pull_workflow_fit(lm_fit)), estimate)[1]), big.mark=",", nsmall=0, scientific=FALSE)` for 0 square feet, and that
 every extra square foot increases the cost of the house by \$`r format(round(pull(tidy(pull_workflow_fit(lm_fit)), estimate)[2]), scientific=FALSE)`. Finally, we predict on the test data set to assess how well our model does:
 
 ```{r 08-assessFinal}
@@ -199,7 +199,7 @@ lm_test_results
 ```
 
 Our final model's test error as assessed by RMSPE
-is `r format(round(lm_test_results %>% filter(.metric == 'rmse') %>% pull(.estimate)), scientific=FALSE)`. 
+is `r format(round(lm_test_results %>% filter(.metric == 'rmse') %>% pull(.estimate)), big.mark=",", nsmall=0, scientific=FALSE)`. 
 Remember that this is in units of the target/response variable, and here that
 is US Dollars (USD). Does this mean our model is "good" at predicting house
 sale price based off of the predictor of home size? Again answering this is
@@ -464,7 +464,7 @@ lm_mult_test_results
 ```
 
 We obtain an RMSPE for the multivariate linear regression model 
-of `r format(lm_mult_test_results %>% filter(.metric == 'rmse') %>% pull(.estimate), scientific = FALSE)`. This prediction error
+of `r format(lm_mult_test_results %>% filter(.metric == 'rmse') %>% pull(.estimate), big.mark=",", nsmall=0, scientific = FALSE)`. This prediction error
 is less than the prediction error for the multivariate K-NN regression model,
 indicating that we should likely choose linear regression for predictions of
 house price on this data set. But we should also ask if this more complex
@@ -472,7 +472,7 @@ model is doing a better job of predicting compared to our simple linear
 regression model with only a single predictor (house size). Revisiting last
 section, we see that our RMSPE for our simple linear regression model with
 only a single predictor was 
-`r format(lm_test_results %>% filter(.metric == 'rmse') %>% pull(.estimate), scientific = FALSE)`, 
+`r format(lm_test_results %>% filter(.metric == 'rmse') %>% pull(.estimate), big.mark=",", nsmall=0, scientific = FALSE)`, 
 which is slightly more than that of our more complex model. Our model with two predictors
 provided a slightly better fit on test data than our model with just one. 
 As mentioned earlier, this is not always the case: sometimes including more
