--- a/07-regression1.Rmd
+++ b/07-regression1.Rmd
@@ -144,10 +144,10 @@ offer less? Absent any other information, we can get a sense for a good answer
 to this question by using the data we have to predict the sale price given the
 sale prices we have already observed. But in Figure \ref@(fig:07-small-eda-regr),
 you can see that we have no
-observations of a house of size *exactly* 2000 square feet. How can we predict
+observations of a house of size *exactly* 2,000 square feet. How can we predict
 the price? 
 
-```{r 07-small-eda-regr, fig.height = 4, fig.width = 5, fig.cap = "Scatter plot of price (USD) versus house size (square footage) with vertical line indicating 2000 square feet on x-axis"}
+```{r 07-small-eda-regr, fig.height = 4, fig.width = 5, fig.cap = "Scatter plot of price (USD) versus house size (square footage) with vertical line indicating 2,000 square feet on x-axis"}
 small_plot <- ggplot(small_sacramento, aes(x = sqft, y = price)) +
   geom_point() +
   xlab("House size (square footage)") +
@@ -160,7 +160,7 @@ small_plot
 We will employ the same intuition from the classification chapter, and use the
 neighbouring points to the new point of interest to suggest/predict what its
 price should be. For the example above, we find and label the 5 nearest
-neighbours to our observation of a house that is 2000 square feet.
+neighbours to our observation of a house that is 2,000 square feet.
 
 ```{r 07-find-k3}
 nearest_neighbours <- small_sacramento %>%
@@ -194,12 +194,12 @@ prediction <- nearest_neighbours %>%
 prediction
 ```
 
-```{r 07-predictedViz-knn, echo = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Scatter plot of price (USD) versus house size (square footage) with predicted price for a 2000 square-foot house based on 5 nearest neighbours represented as a red dot"}
+```{r 07-predictedViz-knn, echo = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Scatter plot of price (USD) versus house size (square footage) with predicted price for a 2,000 square-foot house based on 5 nearest neighbours represented as a red dot"}
 nn_plot +
   geom_point(aes(x = 2000, y = prediction[[1]]), color = "red", size = 2.5)
 ```
 
-Our predicted price is \$`r format(round(prediction[[1]]), scientific = FALSE)`
+Our predicted price is \$`r format(round(prediction[[1]]), big.mark=",", nsmall=0, scientific = FALSE)`
 (shown as a red point above), which is much less than \$350,000; perhaps we
 might want to offer less than the list price at which the house is advertised.
 But this is only the very beginning of the story. We still have all the same
@@ -336,7 +336,7 @@ Figure \@ref(fig:07-howK) visualizes the effect of different settings of $K$ on 
 regression model. Each plot shows the predicted values for house price from
 our K-NN regression model for 6 different values for $K$: 1, 3, `r kmin`, 41, 250, and 450.
 For each model, we predict a price for every possible home size across the range of home sizes we
-observed in the data set (here 500 to 5000 square feet) and we plot the
+observed in the data set (here 500 to 5,000 square feet) and we plot the
 predicted prices as a blue line.
 
 ```{r 07-howK, echo = FALSE, fig.height = 12, fig.width = 10,fig.cap = "Predicted values for house price (represented as a blue line) from K-NN regression models for six different values for $K$"}
@@ -444,7 +444,7 @@ sacr_summary <- sacr_fit %>%
 sacr_summary
 ```
 Our final model's test error as assessed by RMSPE 
-is `r format(round(sacr_summary %>% filter(.metric == 'rmse') %>% pull(.estimate)), scientific=FALSE)`. 
+is `r format(round(sacr_summary %>% filter(.metric == 'rmse') %>% pull(.estimate)), big.mark=",", nsmall=0, scientific=FALSE)`. 
 But what does this RMSPE score mean? When we calculated test set prediction accuracy in K-NN
 classification, the highest possible value was 1 and the lowest possible value was 0. 
 If we got a value close to 1, our model was "good;" and otherwise,
@@ -594,9 +594,9 @@ knn_mult_mets
 ```
 This time when we performed K-NN regression on the same data set, but also
 included number of bedrooms as a predictor, we obtained a RMSPE test error 
-of `r format(round(knn_mult_mets %>% filter(.metric == 'rmse') %>% pull(.estimate)), scientific=FALSE)`.
+of `r format(round(knn_mult_mets %>% filter(.metric == 'rmse') %>% pull(.estimate)), big.mark=",", nsmall=0, scientific=FALSE)`.
 This compares to a RMSPE test error 
-of  `r format(round(sacr_summary %>% filter(.metric == 'rmse') %>% pull(.estimate)), scientific=FALSE)`
+of  `r format(round(sacr_summary %>% filter(.metric == 'rmse') %>% pull(.estimate)), big.mark=",", nsmall=0, scientific=FALSE)`
 when we used only house size as the
 single predictor. Thus in this case, we did not improve the model 
 by a large amount by adding this additional predictor.
